assets/css/style.scss
@import './partials/variables';
@import './partials/color';
@import './partials/mixin';
@import './partials/margin';
@import './partials/padding';
@import './partials/grid';
@import './partials/background-color';
@import './partials/btn';
@import './partials/helpers';
@import './partials/border';
@import './partials/cards';
@import './partials/capsules';
@import './partials/modal';
@import './partials/formsFields';
@import './partials/tabs';
@import './partials/buttons';
@import './partials/tables';
@import './partials/_steps';
@import './partials/calendar';
@import './partials/shadow';
@import './components/sidebar';
@import './components/login';
@import './components/header';
@import './components/patient-page';
@import './components/labels';
@import './components/home';
@import './components/chat';
@import './components/enrollment';
@import './components/admin';
@import './components/patient-details';
@import './components/inventory';
@import './components/consumables';
@import './components/support';

@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&display=swap');

body {
  background-color: white;
  font-family: 'Poppins', sans-serif;
  font-weight: 400;
}

.profile-grey-bg {
  background-color: #ececec;
  padding: 20px;
  border-radius: 35px;
}

.default-select {
  .ant-select-selection {
    margin-top: -8px;
  }
}

.main {
  padding: 5px;
  margin-top: 5px;
}

a {
  color: $primary-color;
  &:hover {
    color: $primary-color;
  }
}

.w-125{
  width: 123%;
}

.square-table .ant-table-content {
  table {
    border-collapse: separate;
    text-align: center;
    vertical-align: middle;
  }
  table thead tr {
    border-collapse: collapse;
    border-style: hidden;
  }
  .ant-table-thead tr th {
    border: unset;
    padding: 15px;
    font-weight: bold;
    text-align: center;

    // why repeating code ?? check the below line
    &:first-child {
      border-bottom-left-radius: 40px;
      border-top-left-radius: 40px;
    }
    &:last-child {
      border-bottom-right-radius: 40px;
      border-top-right-radius: 40px;
    }
  }

  .ant-table-row td {
    &:first-child {
      border-bottom-left-radius: 40px;
      border-top-left-radius: 40px;
    }
    &:last-child {
      border-bottom-right-radius: 40px;
      border-top-right-radius: 40px;
    }
  }
}

.ant-form-vertical .ant-form-item {
  // padding-bottom: unset;
  // margin-bottom: unset;
}

.square-table .ant-table-tbody {
  tr:hover:not(.ant-table-expanded-row):not(.ant-table-row-selected) {
    td {
      background: #fff;
    }
  }
}
.page-header {
  margin-top: -1rem;
  margin-bottom: 20px;
}
.page-title {
  font-size: 	1.5625rem;
  font-weight: 600;
}
.heading {
  font-size: 	1.5625rem;
}
.plain-header-border {
  .ant-card-head {
    border-bottom: none;
  }
}
.vertical-line {
  position: absolute;
  width: 20px;
  height: 0;
  border: 1px solid #e9e9e9;
  transform: rotate(90deg);
  margin-top: 20px;
  margin-left: -20px;
}
.specific {
  // for treatment process
  .page-title {
    font-size: 	1.5625rem;
    font-weight: 600;
    margin-left: 5%;
  }
}
.specific-storage {
  // for Smart-Lab-Storage
  .page-title {
    font-size: 	1.5625rem;
    font-weight: 600;
    margin-left: 10px;
  }
}

